# arsenal

./: .drone.yml  .gitignore  .gitmodules  .travis.yml  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FAQ.html  LICENSE  LICENSE.md  Makefile  Makefile.toml  NOTICES.hbs  NOTICES.md  README.md  about.toml  architecture.html  book.toml  bors.toml  contributing.html  deny.toml  development-guide.html  getting-started.html  index.html  news.html  overview.html  print.html  searchindex.js  searchindex.json  using-git.html  vision.html
.cargo/: config
.github/: FUNDING.yml  dependabot.yml  opencollective.yml
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---feature-request.md  --question.md  bug_report.md  config.yml  feature_request.md
architecture/: draft-1.html  draft-2.html
arsenal-blender/: __init__.py  menus.py  operators.py  panels.py
arsenal-runtime/: Cargo.toml
arsenal-runtime/src/: main.rs
arsenal_blender/: .gitignore  README.md  keymaps.py  menus.py  operators.py  panels.py
arsenal_blender_core/: .gitignore  Cargo.toml  README.md
arsenal_blender_core/src/: exporter.rs  lib.rs  operators.rs  utils.rs
arsenal_blender_core/src/exporter/: display_config.ron  scene.ron
arsenal_runtime/: Cargo.toml  README.md
arsenal_runtime/examples/asteroids/: python.yaml
arsenal_runtime/examples/asteroids/python/systems/: movement.yml
arsenal_runtime/src/: main.rs  types.rs
arsenal_scripting/: Cargo.toml  README.md
arsenal_scripting/examples/: python_scripting.rs
arsenal_scripting/examples/python_scripting/: python.yaml
arsenal_scripting/language_adapters/: README.md
arsenal_scripting/language_adapters/python/: Cargo.toml  README.md
arsenal_scripting/language_adapters/python/src/: lib.rs
arsenal_scripting/src/: adapters.rs  bevy_plugin.rs  bindings.rs  ffi.rs  lib.rs  metadata.rs  tools.rs  type_registry.rs  types.rs  utils.rs
arsenal_scripting/src/bindings/: bevy.rs
arsenal_scripting/src/bindings/bevy/: transform.rs
arsenal_scripting/types/: Cargo.toml
arsenal_scripting/types/src/: lib.rs
book/: FAQ.md  SUMMARY.md  architecture.md  getting-started.md  news.md  overview.md
book/architecture/: draft-1.md  draft-2.md
book/architecture/assets_src/: arsenalArchitecture-2.xml  arsenalArchitecture.xml
book/assets_src/: arsenalArchitecture.xml
ci/: before_deploy.sh  script.sh
contributing/: documentation.html
development-guide/: architecture.html  building.html
docs/arsenal_book/: book.toml  development-guide.md  getting-started.md
docs/arsenal_book/development-guide/: architecture.md
docs/arsenal_book/src/: FAQ.md  SUMMARY.md  contributing.md  news.md  (+5 more)
docs/logo/: logo-3d.blend
src/: exporter.rs  gltf.rs  lib.rs  operators.rs  utils.rs
theme/: index.hbs
using-git/: creating-a-sandbox.html  making-changes.html
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
(+9 files in other folders)
