[package]
name = "arsenal"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
enable_profiling = ["flame", "flamer"]

[dependencies]

    # Parallelism
    rayon = "1.1"

    # Scene Export
    gltf-json = { version = "0.12", features = ["names", "extras"] }

    # Python Interface
    pyo3 = { version = "0.7", features = ["extension-module"] }

    # Profiling
    # Temporarily use my fork of flame because it will show milliseconds instead of samples in the HTML dump
    flame = { git = "https://github.com/TyOverby/flame.git", rev = "689d318c3", optional = true }
    flamer = { version = "0.3", optional = true }

