[package]
name = "arsenal_blender_core"
description = "Core library use by the arsenal-blender plugin to perform most tasks"
version = "0.1.0"
license = "MIT"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

[lib]
name = "core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
enable_profiling = ["flame", "flamer"]

[dependencies]

    # Scene Export
    gltf-json = { version = "0.12", features = ["names", "extras"] }

    # Python Interface
    pyo3 = { version = "0.7", features = ["extension-module"] }

    # Profiling
    # Temporarily use my fork of flame because it will show milliseconds instead of samples in the HTML dump
    flame = { git = "https://github.com/TyOverby/flame.git", rev = "689d318c3", optional = true }
    flamer = { version = "0.3", optional = true }

