[package]
name = "arsenal_runtime"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
serde = "1.0"
amethyst = "0.10"
amethyst_gltf = "0.5"

# Temporarily use a fork of coreaudio-sys that support cross-compiling from
# linux.
[replace.'coreaudio-sys:0.2.2']
git = "https://github.com/RustAudio/coreaudio-sys.git"
ref = "13a32d7"
